   * The new portrait dialogs can get higher so the scrollbars are less often
     visible.
 * Multiplayer ui
   * Added a gui front-end to various commands, brought up by double clicking
     a player name, replacing the old whisper dialog
   * Automatically select the game the selected player is in
   * Try to preserve the selected player when the player list is updated
 * Language and i18n:
   * updated translations: Czech, Danish, German, Hungarian, Italian, Japanese,
     Slovak, Spanish
   * updated DejaVuSans to 2.28
 * Networking
   * ensure SDL Net initialized before attempting to send upload_log
 * WML engine:
   * add an "animate" key to the [teleport] event
   * add a resistance_anim block used whenever a unit uses a [resistance]
     ability on a neghbour
   * the animate_unit action can now animate multiple units
   * the animate_unit action can now change the direction the unit is facing
     with a SLF
 * Miscellaneous and bug fixes:
   * Added the sunset feature to the new dialogs.
   * Fix the calculate feature in the test scenario.
   * Fix an endian issue which rendered text wrong on big endian machines.
   * A backspace in a textbox with selection, now clears the selection.
   * Scrollwheel mouses can scroll the new listboxes.
   * Fix a bug with temporary objects not being removed at next scenario
   * Fix replays with empty starting positions.

Version 1.5.7:
 * Campaigns:
   * Descent into Darkness
     * Removed debris from this campaign's copy of the map of the
       Great Continent, and converted Parthyn's marker (which was black)
       to a brownish marker.
   * Eastern Invasion
     * Converted to the new gold carryover system.
     * Gave the undead flag to relevant sides.
     * Fixed Dacyn and Owaec not being loyal.
     * In 'Mal-Ravanal's Capital', reworked how the prisoner knights work: now
       they're placed on the map in cages with guards next to them, and the
       player must kill the guard to release the prisoner.